test/corpus/arrow.txt

======
dash
======

Fam

Name - Name

Name, Name - Name, Name

------

(root
  (family
    (name_desc (name))
    (relations
      (relation
        (sources (name))
        (targets (name_desc (name))))

      (relation
        (sources (name) (name))
        (targets (name_desc (name)) (name_desc (name))))
)))

======
dash + label
======

Fam

Name - word and word

------

(root
  (family
    (name_desc (name))
    (relations
      (relation
        (sources (name))
        (words)
      )
)))


======
dash + label + Name
======

Fam

Name - word and word Name

------

(root
  (family
    (name_desc (name))
    (relations
      (relation
        (sources (name))
        (words)
        (targets (name_desc (name))))
)))

======
dash arrows
======

Fam

Name -> word and word Name

Name <- Name, Name

Name and Name <-> word Name

Name - word

----------

(root
  (family
    (name_desc (name))
    (relations
      (relation
        (sources (name))
        (words)
        (targets (name_desc (name))))

      (relation
        (sources (name))
        (targets (name_desc (name)) (name_desc (name))))

      (relation
        (sources (name) (name))
        (words)
        (targets (name_desc (name))))

      (relation
        (sources (name))
        (words)
      )
)))
