test/corpus/eof.txt
======
Family + EOF
======

Family
---------------

(root (family (family_name (name))))

======
Family + Family + EOF
======

Family

Family
---------------

(root
  (family (family_name (name)))
  (family (family_name (name)))
)

======
Relation + EOF
======

Family

Name = Name
---------------

(root
  (family
    (family_name
      (name))
    (relations
      (relation
        (sources (name))
        (targets
          (name_def
            (name)))))))


======
Relation + Family + EOF
======

Family

Name = Name

Family
---------------

(root
  (family
    (family_name
      (name))
    (relations
      (relation
        (sources (name))
        (targets
          (name_def
            (name))))))
  (family
    (family_name
      (name))))
