test/corpus/simple.txt
========
Simple list
========

Family

Name1 = Name2

Name1 = Name2

Family2

Name1 = Name2

----

(root
  (family
    (name_desc (name))
    (relations
      (relation
        (name)
        (name_desc (name)))
      (relation
        (name)
        (name_desc (name)))
    )
  )
  (family
    (name_desc (name))
    (relations
      (relation
        (name)
        (name_desc (name)))
    )
  ))

